[util] Update travis minimum node version. Set package.json#engine to `>= 6.0`

--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
   "bugs": {
     "url": "https://github.com/rumkin/keyget/issues"
   },
-  "homepage": "https://github.com/rumkin/keyget#readme",
+  "homepage": "https://github.com/rumkin/keyget",
+  "engine": {
+    "node": ">= 6.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "npm test"
