--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "keyget",
   "description": "Is nested object manipulation kit. It can find, get, set, push or call nested properties.",
-  "version": "2.3.0-rc.2",
+  "version": "2.3.0-rc.3",
   "main": "index.js",
   "scripts": {
     "cov": "nyc npm run test",
@@ -16,7 +16,9 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^7.14.0",
     "husky": "^1.3.0",
+    "nyc": "^15.1.0",
     "mocha": "^8.2.1",
     "should": "^13.2.3"
   },
@@ -50,9 +52,5 @@
     "hooks": {
       "pre-commit": "npm test"
     }
-  },
-  "dependencies": {
-    "eslint": "^7.14.0",
-    "nyc": "^15.1.0"
   }
 }
